edit signup form

--- a/style.css
+++ b/style.css
@@ -15,18 +15,11 @@ body {
 
 .email{
 	color: #000;
+	font-style: italic;
 }
 
 h1,h3{
 	background-color: rgba(0,0,0,0.4);
 	padding-top: 1%;
 	padding-bottom: 1%;
-}
-
-#mc-embed-signup{
-text-align: center;
-}
-
-#mc_embed_signup_scroll{
-	text-align: center;
 }
