--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 .intro-message {
 	text-align: center;
-	padding-top: 5%;
+	padding-top: 20%;
 	padding-bottom: 10%;
 	color: #fff;
 }
 
 body {
-	background: url(intro2.jpg) no-repeat center;
+	background: url(girl.jpg) no-repeat center;
+	font-family: Georgia;
 }
 
 .signup-form{
